fixed responsive overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ body {
     font-size: 14px;
 }
 
+.root {
+  overflow: hidden;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
