--- a/src/components/header-component/header.css
+++ b/src/components/header-component/header.css
@@ -46,14 +46,14 @@
     }
 }
 .svg_rotating_logo_polygon {
--webkit-animation: rotating 10s ease-in-out;
--moz-animation: rotating 10s ease-in-out;
--ms-animation: rotating 10s ease-in-out;
--o-animation: rotating 10s ease-in-out;
+-webkit-animation: rotating 10s infinite;
+-moz-animation: rotating 10s infinite;
+-ms-animation: rotating 10s infinite;
+-o-animation: rotating 10s infinite;
 transform-origin: 57% 37%;
 stroke: white;
 stroke-width: 7px;
-animation: rotating 10s ease-in-out;
+animation: rotating 10s infinite;
 fill: white;
 }
 
